--- a/style.css
+++ b/style.css
@@ -1,11 +1,49 @@
-.parent{
-    display: grid;
-    grid-template-columns: auto auto auto; 
-}
-.child{
+.topnav {
+    overflow: hidden;
+    background-color: #e9e9e9;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Style the "active" element to highlight the current page */
+  .topnav a.active {
+    background-color: #2196F3;
+    color: white;
+  }
+  
+  /* Style the search box inside the navigation bar */
+  .topnav input[type=text] {
+    float: right;
+    padding: 6px;
+    border: none;
+    margin-top: 8px;
+    margin-right: 16px;
+    font-size: 17px;
+  }
+  
+    
+  .child{
+    float: left;
+    width: 33.33%;   /* Specifies 3 columns in each row */
     padding: 5px;
     box-sizing: border-box;
-}
-.child img{
-   width: 100%;
-}
+ }
+ .child img{
+    width: 100%;  /* Make image fit in the div */
+    
+ }
