--- a/style.css
+++ b/style.css
@@ -140,3 +140,10 @@ body {
     width: 100%;
     height: auto;
 }
+/*format details on the modal*/
+.flag-img {
+  display: block;
+  width: 45%;
+  min-width: 7.5em;
+  margin: 1.8em auto 1.2em auto;
+}
