--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ body {
     animation-duration: 0.4s
   }
   
-  /* Add Animation */
+  /* Add drop-down Animation */
   @-webkit-keyframes animatetop {
     from {top:-300px; opacity:0} 
     to {top:0; opacity:1}
