--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 
 .topnav {
   overflow: hidden;
-  background-color: #e9e9e9;
+  background-color: #f11616;
 }
 
 .topnav a {
@@ -27,7 +27,7 @@ body {
 }
 
 .topnav a.active {
-  background-color: #2196F3;
+  background-color: #f11616;
   color: white;
 }
 
@@ -47,14 +47,14 @@ body {
   padding: 6px 10px;
   margin-top: 8px;
   margin-right: 16px;
-  background: #ddd;
+  background: #6e79f3;
   font-size: 17px;
   border: none;
   cursor: pointer;
 }
 
 .topnav .search-container button:hover {
-    background: #ccc;
+    background: #6e79f3;
   }
   /*Modal dialog*/
   .modal {
@@ -130,6 +130,11 @@ body {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    letter-spacing: 2px;
+    margin-bottom: 1.8em;
+    font-weight: 600;
+    color: #222a43;
+    text-align: center;
 }
 .child{
     flex-basis: 33.33%;
@@ -146,4 +151,12 @@ body {
   width: 45%;
   min-width: 7.5em;
   margin: 1.8em auto 1.2em auto;
+}
+.main-container h2 {
+  font-weight: 600;
+  color: #222a43;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-bottom: 1.8em;
 }
